[package]
name = "pixelblaze-audio-reader"
authors = ["Hannah Kolbeck <hskolbeck@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Reads audio from a device and sends analysis to pixelblazes"

[dependencies]
pixelblaze-rs = {path = "../..", features = ["sensor"]}

spectrum-analyzer = "1.4.0"
cpal = "0.15.2"
text_io = "0.1.12"
clap = { version = "4.3.8", features = ["derive"] }